--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,64 @@
+* { box-sizing:border-box; }
+
 body {
+    background:#4169e1;
+    display:flex;
+    flex-direction:column;
     margin:0 auto;
     font-size:17px;
     max-width:1920px;
+    align-items:center;
+    justify-content:flex-start;
+}
+
+#root {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    width:100%;
+}
+
+main {
+    padding:5rem 10rem;
+}
+
+header {
+    background:linear-gradient(to bottom, #000000, #330033);
+    color:#fff;
+    padding:1.8rem 5rem;
+    width:100%;
+}
+
+h1 {
+    font-family:"Bungee Inline", sans-serif;
+    font-size:3rem;
+    margin:0;
+    padding:0;
+    text-align:center;
+    text-transform:uppercase;
+    text-shadow:0 0 10px 5px rgba(0.1, 0.1, 0.1, 0.3);
+}
+
+h2 {
+    color:#efef00;
+    font-size:1.5rem;
+    margin:0;
+    padding:0;
+    text-align:center;
+    text-transform:uppercase;
+    text-shadow:0 0 10px 5px rgba(0.1, 0.1, 0.1, 0.3);
 }
 
 .song-list {
+    background:#fff;
+    border-radius:.5rem;
     display:flex;
     flex-direction:column;
     margin:0 0 2rem 0;
     padding:0;
     align-items:flex-start;
+    overflow:hidden;
+    box-shadow:0 0 10px 5px rgba(0.1, 0.1, 0.1, 0.2);
 }
 
 .song-list li {
@@ -17,23 +66,68 @@ body {
     list-style-type:none;
     list-style-image:none;
     margin:0;
-    padding:0.2rem 0.5rem;
+    padding:0.2rem 1rem;
+    width:100%;
 }
 
 .song-list li.highlighted {
-    background:#000;
+    background:linear-gradient(to bottom, #000000, #330033);
     color:#fff;
 }
 
 .player {
     display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+.player .song-display {
+    margin-bottom:.75rem;
+    width:100%;
+}
+
+.player .track-title {
+    background:#fff;
+    border:1px solid #666;
+    margin-bottom:.5rem;
+    padding:.2rem .5rem;
+    overflow:hidden;
+    white-space:nowrap;
+    width:100%;
+    box-shadow:0 0 10px 5px rgba(0.1, 0.1, 0.1, 0.2);
+}
+
+.player .track-title p {
+    display:inline-block;
+    margin:0;
+    padding-left:100%;
+    animation:scroll-left 15s linear infinite;
+}
+
+.player .timeline-bar {
+    cursor:pointer;
+    background:linear-gradient(to bottom, #000000, #330033);
+    height:5px;
+    width:100%;
+}
+
+.player .timeline-bar .progress-bar {
+    background:linear-gradient(to bottom, #aa00aa, #ff00ff);
+    height:5px;
+}
+
+.player .timeline-bar:hover .progress-bar {
+    border-right:2px solid #efef00;
+}
+
+.player .controls {
+    display:flex;
     column-gap:0.5rem;
-    justify-content:center;
 }
 
 .player button {
     display:flex;
-    background:#009;
+    background:linear-gradient(to bottom, #aa00aa, #ff00ff);
     color:#fff;
     border-radius:50%;
     height:50px;
@@ -41,4 +135,21 @@ body {
     align-items:center;
     justify-content:center;
     column-gap:0.2rem;
+    outline:none;
+    box-shadow:0 0 10px 5px rgba(0.1, 0.1, 0.1, 0.1);
 }
+
+.player button.active {
+    color:#efef00;
+    border:1px solid #efef00;
+}
+
+/* Keyframes for scrolling */
+  @keyframes scroll-left {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
